--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-modal": "^3.13.1",
     "react-paginate": "^7.1.2",
+    "react-paystack": "^3.0.3",
     "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
