--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "engines": {
+    "node": "14.x",
+    "yarn": "1.x",
+    "npm": "7.x"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
