--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-modal": "^3.13.1",
     "react-paginate": "^7.1.2",
     "react-paystack": "^3.0.3",
@@ -21,8 +22,10 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9"
   },
