--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dateformat": "^4.5.1",
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
     "formik": "^2.2.6",
