--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.13.1",
+    "react-notifications": "^1.7.2",
     "react-paginate": "^7.1.2",
     "react-paystack": "^3.0.3",
     "react-redux": "^7.2.4",
