--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-show-more-text": "^1.5.0",
     "react-slick": "^0.28.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
