--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.2.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-modal": "^3.13.1",
